[package]
name = "lagging_server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4.4.0" }
rand = "0.8.5"
clap = { version = "^4.3.21", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
